Fix background color too dark

--- a/src/containers/ProjectsList/Project/Project.scss
+++ b/src/containers/ProjectsList/Project/Project.scss
@@ -168,7 +168,7 @@
 
   // projects images
   &__summary-image {
-    background-color: #e2e1e1;
+    background-color: #f8f8f8;
     padding: 25rem 0;
     @include respond(tabPort) {
       padding: 20rem 0;
